dom/base/nsPIDOMWindow.h
@@ -876,7 +876,7 @@ public:
   // window.
   void SyncStateFromParentWindow();
 
-  bool HasAudioContexts() const;
+  bool IsPlayingAudio();
 
   mozilla::dom::TimeoutManager& TimeoutManager();
 
